# itc2

./: .buildinfo  .gitignore  Makefile  README.md  _toc.yml  dl_nb.py  genindex.html  intro.html  objects.inv  pokemon.html  pyproject.toml  requirements - Copy.txt  requirements.txt  ressource.html  search.html  searchindex.js  sql_groupby.html  sql_select_join.html  titanic.csv  tp_titanic.html
.devcontainer/: devcontainer.json
.github/: deploy.yml
0_python/: 1_revisions.html  aide_memoire.html  entrainement.html  programmer.html
0_sql/: pokemon.html  sql_groupby.html  sql_join.html  sql_select.html
1_prog_dyn/: prog_dyn.html
1_sql/: cours.html  pokemon.html  sql_entity.html  sql_groupby.html  sql_join.html  sql_select.html  sqlzoo.html
2_dict/: dict.html  tp.html
2_knn/: knn.html
3_prog_dyn/: cours.html  lis.html  prog_dyn.html  sp.html  tp.html
4_knn/: cours.html  knn.html  tp.html
5_kmeans/: cours.html  kmeans.html
6_jeux/: cours.html  tp.html
7_centrale/: centrale_math_info_22.html
_sources/: intro.md  pokemon.ipynb  ressource.md  sql_groupby.md  sql_select_join.md  tp_titanic.ipynb
_static/: button_cor.js  custom.css
book/: _config.yml  _toc.yml
cours/: Jeux.html
ds/: ds.html
exercice/: Jeux.html
exercices/: Jeux.html
files/: _config.yml  _toc.yml  centrale.py  intro.md  pokemon.ipynb  sql_select_join.md  tp_titanic.ipynb  voitures.csv
itc2/: _config.yml  _toc.yml  intro.md
menu/: 0.html  1.html
slides/: dict.html  resume_cours_itc2.html
td/: resume_cours_itc2.html
tp_automate/: automate_cellulaire.html
(+301 files in other folders)
